2010-05-21  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_render.c (ol_osd_render_update_font): FIX: Memory leak when setting font for renderer of OSD Window

	* src/ol_config.c (ol_config_emit_change): FIX: Memory leak when emitting signals

2010-05-19  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_lrc_fetch_module.c: CHANGE: flush pipe before exit search and download child process. Hope this will fix issue 66.

2010-05-18  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_window.c: CHANGE: Remove gtkprivate.h dependency in OSD Window

	* src/ol_osd_module.c (ol_osd_module_set_played_time): FIX: A memory leak in OSD module on getting current lyric text.
	(hide_message): FIX: The hide message timer should be cancelled if there is something wrong.

2010-04-30  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_singleton.c: ADD: Singleton support

2010-04-28  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_trayicon.c: ADD: App Indicator support for Ubuntu 10.04

	* src/ol_osd_module.c (ol_osd_button_release): FIX: The default button release handler of OSD Windows works now. This fix issue 86 that the osd panel didn't hide if it is clicked.

	* src/ol_main.c: ADD: Debug command argument

	* src/ol_lrc_parser.c : FIX: issue 80, ignore utf8 BOM when parsing lrc files

	* src/ol_menu.c (ol_menu_assign_lrc): FIX: issue 85, create filter every time file chooser dialog popup.

2010-04-27  Tiger Soldier  <tigersoldier@tigersoldier-desktop>

	* src/ol_osd_window.c (ol_osd_window_set_input_shape_mask): FIX: issue 71, changed the method of setting input shape, the new method works in GTK 2.20

2010-04-10  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_render.c: Clean codes and change all printf debug info to ol_debug

2010-04-07  Tiger Soldier  <tigersoldi@gmail.com>

	* src/ol_osd_module.c: ADD: Pop up context menu when right click on OSD panel
	ADD: Adjust delay of lyrics when mouse scroll on OSD panel
